<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.classicmodels</groupId>
    <artifactId>DeclarativeDDLDatabase</artifactId>
    <version>1.0</version>    

    <name>DeclarativeDDLDatabase</name>
    <description>Using jOOQ to build the typesafe SQL and to execute it</description>    

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
        
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <java.version>17</java.version>    
        <kotlin.version>1.6.0</kotlin.version>           
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        
        <jooq.version>3.15.5</jooq.version>     
        <codehaus.mojo.version>1.0.0</codehaus.mojo.version>    
                
        <main.class>com.classicmodels.MainApplicationKt</main.class>
    </properties>

    <dependencies>        
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>    
        </dependency>
        <dependency>
            <groupId>org.jooq.trial-java-8</groupId>
            <artifactId>jooq</artifactId>         
            <version>${jooq.version}</version>
        </dependency>    
        <dependency>  
            <groupId>org.jooq.trial-java-8</groupId>
            <artifactId>jooq-meta-extensions</artifactId>
            <version>${jooq.version}</version>
        </dependency>               
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc8</artifactId>            
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ucp</artifactId>            
        </dependency>        
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>    
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>            
        </dependency>         
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>                        
                    </compilerPlugins>                   
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>                    
                                <sourceDir>${project.basedir}/target/generated-sources/jooq/generated</sourceDir>                                                   
                                <!-- <sourceDir>${project.basedir}/src/main/java</sourceDir> -->
                            </sourceDirs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>                 
                                <!-- <sourceDir>${project.basedir}/src/test/java</sourceDir> -->
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>    
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>                        
                    </compilerArgs>
                </configuration>
                <executions>
                    <!-- Replacing default-compile as it is treated specially by maven -->
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <skip>${maven.test.skip}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>                
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>   
            <plugin>
                <groupId>org.jooq.trial-java-8</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>${jooq.version}</version>
                <executions>
                    <execution>
                        <id>generate-for-oracle</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>                                  
                        <configuration xmlns="http://www.jooq.org/xsd/jooq-codegen-3.15.0.xsd">
                            <generator>
                                
                                <!-- The default code generator. 
                                     You can override this one, to generate your own code style.
                                     
                                Supported generators:                                
                                - org.jooq.codegen.JavaGenerator
                                - org.jooq.codegen.ScalaGenerator
                                - org.jooq.codegen.KotlinGenerator
                                
                                Defaults to org.jooq.codegen.JavaGenerator -->
                                <name>org.jooq.codegen.KotlinGenerator</name>                                

                                <database>                           
                                    <!-- Rely on jOOQ DDL Database API -->
                                    <name>org.jooq.meta.extensions.ddl.DDLDatabase</name>                    

                                    <!-- H2 database schema -->
                                    <inputSchema>PUBLIC</inputSchema> 
                                    
                                    <properties>            
                                        <!-- Specify the location of your SQL script.
                                        You may use ant-style file matching, e.g. /path/**/to/*.sql
                                        
                                        Where:
                                        - ** matches any directory subtree
                                        - * matches any number of characters in a directory / file name
                                        - ? matches a single character in a directory / file name -->
                                        <property>
                                            <key>scripts</key>
                                            <value>./../../../../../db/migration/ddl/oracle/sql</value>
                                        </property>
        
                                        <!-- The sort order of the scripts within a directory, where:
                                   
                                        - semantic: sorts versions, e.g. v-3.10.0 is after v-3.9.0 (default)
                                        - alphanumeric: sorts strings, e.g. v-3.10.0 is before v-3.9.0
                                        - flyway: sorts files the same way as flyway does
                                        - none: doesn't sort directory contents after fetching them from the directory -->
                                        <property>
                                            <key>sort</key>
                                            <value>flyway</value>
                                        </property>
        
                                        <!-- The default schema for unqualified objects:
                           
                                        - public: all unqualified objects are located in the PUBLIC (upper case) schema
                                        - none: all unqualified objects are located in the default schema (default) 
                                        
                                        This configuration can be overridden with the schema mapping feature -->
                                        <property>
                                            <key>unqualifiedSchema</key>
                                            <value>none</value>
                                        </property>
        
                                        <!-- The default name case for unquoted objects:
                                   
                                        - as_is: unquoted object names are kept unquoted
                                        - upper: unquoted object names are turned into upper case (most databases)
                                        - lower: unquoted object names are turned into lower case (e.g. PostgreSQL) -->
                                        <property>
                                            <key>defaultNameCase</key>
                                            <value>as_is</value>
                                        </property>                                                                                                               
                                    </properties>
                                    
                                    <!-- All elements that are generated from your schema
                                    (A Java regular expression. Use the pipe to separate several expressions)
                                    Watch out for case-sensitivity. Depending on your database, this might be important! 
                                    You can create case-insensitive regular expressions using this syntax: (?i:expr).
                                    Whitespace is ignored and comments are possible. -->       
                                    <includes>.*</includes>
                                    
                                    <!-- All elements that are excluded from your schema
                                    (A Java regular expression. Use the pipe to separate several expressions).
                                    Excludes match before includes, i.e. excludes have a higher priority. -->
                                    <excludes>
                                        flyway_schema_history | DEPARTMENT_PKG | GET_.*
                                        | CARD_COMMISSION | PRODUCT_OF_PRODUCT_LINE
                                        | REFRESH_TOP3_PRODUCT | SALE_PRICE | SECOND_MAX
                                        | SET_COUNTER | SWAP | TOP_THREE_SALES_PER_EMPLOYEE
                                        | EVALUATION_CRITERIA | SECOND_MAX_IMPL | TABLE_.*_OBJ
                                        | .*_MASTER | BGT | .*_ARR | TABLE_POPL | TABLE_RES
                                    </excludes>

                                    <!-- Schema version provider -->            
                                    <schemaVersionProvider>${schema.version}</schemaVersionProvider>                                                                        
                                </database>
                                
                                <!-- Rename the generated POJOs and DAOs classes -->                      
                                <strategy>
                                    <matchers>
                                        <tables>
                                            <table>
                                                <pojoClass>                                                         
                                                    <expression>JOOQ_$0</expression>
                                                    <transform>PASCAL</transform>                                                                                      
                                                </pojoClass>
                                                <daoClass>
                                                    <expression>$0_Repository</expression>
                                                    <transform>PASCAL</transform>                                                                                      
                                                </daoClass>
                                            </table>
                                        </tables>
                                    </matchers>
                                </strategy>
                                
                                <!-- jOOQ will generate POJOs and DAOs on our behalf -->
                                <generate>
                                    <daos>true</daos>                                   
                                    <validationAnnotations>true</validationAnnotations>                            
                                    <springAnnotations>true</springAnnotations>   
                                    <deprecationOnUnknownTypes>false</deprecationOnUnknownTypes>
                                    <pojosAsKotlinDataClasses>true</pojosAsKotlinDataClasses>                                                                       
                                </generate>
                                
                                <target>
                                    <!-- The destination package of your generated classes (within the destination directory).
                                    jOOQ may append the schema name to this package if generating multiple schemas,
                                    e.g. org.jooq.your.packagename.schema1
                                    org.jooq.your.packagename.schema2 -->
                                    <packageName>jooq.generated</packageName>
            
                                    <!-- The destination directory of your generated classes. Using Maven directory layout here. -->
                                    <directory>target/generated-sources</directory>
                                </target>
                            </generator>
                        </configuration>
                    </execution>
                </executions> 
            </plugin>
        </plugins>
    </build>
</project>
